src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Business_Function_Detail__c</fullName>
        <description>Level two of the EA Business Function taxonomy</description>
        <inlineHelpText>Please choose a more detailed GSA business function based on the same criteria as above. The business function list is dependent on what you chose above.</inlineHelpText>
        <label>Business Function Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition Planning and Market Research</fullName>
                </value>
                <value>
                    <fullName>Asset Accounting</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Automobile Fleet Management</fullName>
                </value>
                <value>
                    <fullName>Automobile Vehicle Acquisition</fullName>
                </value>
                <value>
                    <fullName>Benefits Management</fullName>
                </value>
                <value>
                    <fullName>Cash Management</fullName>
                </value>
                <value>
                    <fullName>Citizen Services</fullName>
                </value>
                <value>
                    <fullName>Compensation Management</fullName>
                </value>
                <value>
                    <fullName>Congressional Relations</fullName>
                </value>
                <value>
                    <fullName>Construction Management</fullName>
                </value>
                <value>
                    <fullName>Contract Administration and Performance Monitoring</fullName>
                </value>
                <value>
                    <fullName>Contract Award</fullName>
                </value>
                <value>
                    <fullName>Contract Closeout</fullName>
                </value>
                <value>
                    <fullName>Cost Allocation</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Customer Information Management</fullName>
                </value>
                <value>
                    <fullName>Customer Order Management</fullName>
                </value>
                <value>
                    <fullName>Deliveries/ Transportation Management</fullName>
                </value>
                <value>
                    <fullName>Employee Relations Management</fullName>
                </value>
                <value>
                    <fullName>Enterprise Applications</fullName>
                </value>
                <value>
                    <fullName>Enterprise Support Services</fullName>
                </value>
                <value>
                    <fullName>Federal Asset Sales</fullName>
                </value>
                <value>
                    <fullName>Federal IT Solutions</fullName>
                </value>
                <value>
                    <fullName>Financial Planning</fullName>
                </value>
                <value>
                    <fullName>Financial Reporting</fullName>
                </value>
                <value>
                    <fullName>Funds Management</fullName>
                </value>
                <value>
                    <fullName>General Ledger</fullName>
                </value>
                <value>
                    <fullName>HR Strategy Development</fullName>
                </value>
                <value>
                    <fullName>Human Resources Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <description>Level one of the EA Business Function taxonomy.</description>
        <inlineHelpText>Please choose the GSA business function that may require and/or produce the document you are uploading. In cases where multiple are appropriate, pick the best option.</inlineHelpText>
        <label>Business Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Business Management</fullName>
                </value>
                <value>
                    <fullName>Customer Management</fullName>
                </value>
                <value>
                    <fullName>Financial Management</fullName>
                </value>
                <value>
                    <fullName>Human Resources Management</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Supply Chain Management</fullName>
                </value>
                <value>
                    <fullName>Travel and Transportation</fullName>
                </value>
                <value>
                    <fullName>Workspaces</fullName>
                </value>
                <value>
                    <fullName>Public and Government-wide Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAS_Portfolio__c</fullName>
        <label>FAS Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAS</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>GSS</fullName>
                </value>
                <value>
                    <fullName>Acquisition Mgmt</fullName>
                </value>
                <value>
                    <fullName>ITS</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>TMVCS</fullName>
                </value>
                <value>
                    <fullName>Strategic Innovations</fullName>
                </value>
                <value>
                    <fullName>Strategy Mgmt</fullName>
                </value>
                <value>
                    <fullName>Commissioner’s Office</fullName>
                </value>
                <value>
                    <fullName>Controller’s Office</fullName>
                </value>
                <value>
                    <fullName>Office of Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_Technology_Functions__c</fullName>
        <inlineHelpText>Please choose any detailed IT-related business functions that may require and/or produce the document you are uploading. Choose all that apply.</inlineHelpText>
        <label>Information Technology Functions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Support</fullName>
                </value>
                <value>
                    <fullName>Building Monitoring &amp; Control Devices</fullName>
                </value>
                <value>
                    <fullName>Business Information</fullName>
                </value>
                <value>
                    <fullName>Business Relationship Management</fullName>
                </value>
                <value>
                    <fullName>Compliance and Audit</fullName>
                </value>
                <value>
                    <fullName>Education and Awareness</fullName>
                </value>
                <value>
                    <fullName>Emerging Technologies</fullName>
                </value>
                <value>
                    <fullName>End User Device Management</fullName>
                </value>
                <value>
                    <fullName>Enterprise Architecture</fullName>
                </value>
                <value>
                    <fullName>Enterprise IT Policies</fullName>
                </value>
                <value>
                    <fullName>Enterprise IT Strategic Planning</fullName>
                </value>
                <value>
                    <fullName>Identity and Access Management</fullName>
                </value>
                <value>
                    <fullName>IT Asset Management</fullName>
                </value>
                <value>
                    <fullName>IT Portfolio Management</fullName>
                </value>
                <value>
                    <fullName>IT Resource Management</fullName>
                </value>
                <value>
                    <fullName>Monitoring and Control</fullName>
                </value>
                <value>
                    <fullName>Network Resources Management</fullName>
                </value>
                <value>
                    <fullName>Server Resources Management</fullName>
                </value>
                <value>
                    <fullName>Service Management</fullName>
                </value>
                <value>
                    <fullName>Solution Consulting</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Vendor Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>EKB</fullName>
        <active>true</active>
        <label>EKB</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAS</fullName>
        <active>true</active>
        <label>FAS</label>
    </recordTypes>
    <recordTypes>
        <fullName>PD_Library</fullName>
        <active>true</active>
        <label>PD Library</label>
    </recordTypes>
</CustomObject>